# Homework-and-compendiums

./: .test.txt  Pair.java  README.md  Scanner.java  SumLong.java  WordStatLineIndex.java  WordStatWords.java
FP/hw0/: hw0.cabal
FP/hw1/: hw1.cabal
FP/hw2/: hw2.cabal
FP/hw3/: README.md
ML/: TaskA.cpp  TaskB.cpp  TaskC.cpp  TaskD.cpp  TaskE.cpp  TaskF.cpp  TaskG.cpp  TaskH.cpp  TaskJ.cpp  TaskK.cpp  TaskL.cpp  TaskM.cpp  TaskN.cpp  TaskO.cpp  TaskP.cpp
MPP/linked-list-set-Xagen37/: pom.xml
MPP/possible-executions-analysis-Xagen37/: solution.txt
MPP/universal-construction-Xagen37/: build.gradle.kts
bioinformatics/: AdditivePhylogeny.cpp  AffineAlign.cpp  ApproximateOccurences.cpp  BaumNotKuchen.cpp  LongestRepeat.cpp  MedianString.cpp  PattMatchSuffArr.cpp  RandMotif.cpp  ShortestTransform.cpp  StringRec.cpp  Viterbi.cpp
coding_theory/: BM_bch.cpp  Viterbi.cpp
data_analysis/: README.md
java/Homework11/: Const.java  (+2 more)
javascript/: functionalExpression.js
translation_methods/3/gates_of_hell/: CMakeLists.txt
translation_methods/3/gates_of_hell/Src/: Code.g4  main.cpp  regenerate_parser.sh  test.txt
translation_methods/3/gates_of_hell/Src/.antlr/: Code.interp
translation_methods/3/gates_of_hell/Src/Parser/: CodeBaseVisitor.cpp  CodeBaseVisitor.h  CodeLexer.cpp  CodeLexer.h  CodeLexer.interp  CodeParser.cpp  CodeParser.h  CodeVisitor.cpp  CodeVisitor.h
translation_methods/3/gates_of_hell/Src/antlr4-runtime/: Code.tokens  CodeBaseVisitor.cpp  CodeBaseVisitor.h  CodeLexer.cpp  CodeLexer.h  CodeParser.cpp  CodeParser.h  CodeVisitor.cpp  CodeVisitor.h
(+368 files in other folders)
